--- a/index.html
+++ b/index.html
@@ -511,9 +511,9 @@
                                 <li><img src="images/L7(1).png" alt="lab1004"></li>
                             </ul>
                             <ul>
-                                <li><img src="images/l7(2).png" alt="lab1004"></li>
-                                <li><img src="images/l7(3).png" alt="lab1004"></li>
-                                <li><img src="images/l7(4).png" alt="lab1004"></li>
+                                <li><img src="images/L7(2).png" alt="lab1004"></li>
+                                <li><img src="images/L7(3).png" alt="lab1004"></li>
+                                <li><img src="images/L7(4).png" alt="lab1004"></li>
                             </ul>
                         </div>
                         <div class="island">
