--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                                 <ul>
                                     <li>고소한 견과류와</li>
                                     <li>은은한 베리</li>
-                                    <li>풍부한 바디감이</li>
-                                    <li>특징인 블렌딩 커피</li>
+                                    <li>풍부한 바디감의</li>
+                                    <li>아메리카노</li>
                                 </ul>
                             </div>
                             <div class="pic-item swiper-slide">
@@ -150,8 +150,8 @@
                                 <ul>
                                     <li>달콤한 카라멜과</li>
                                     <li>우유 거품의</li>
-                                    <li>부드러운 맛이</li>
-                                    <li>에스프레소 커피</li>
+                                    <li>부드러운 맛의</li>
+                                    <li>카라멜 마끼야또</li>
                                 </ul>
                             </div>
                             <div class="pic-item swiper-slide">
@@ -168,8 +168,8 @@
                                 <ul>
                                     <li>풍미가 진한</li>
                                     <li>에스프레소와 우유에</li>
-                                    <li>달콤한 바닐라 시럽이</li>
-                                    <li>어우러진 커피</li>
+                                    <li>달콤한바닐라 시럽퐁당</li>
+                                    <li>바닐라 라떼</li>
                                 </ul>
                             </div>
                             <div class="pic-item swiper-slide">
@@ -177,8 +177,8 @@
                                 <ul>
                                     <li>초콜릿과 생크림의</li>
                                     <li>감미로운 맛이</li>
-                                    <li>에스프레소와</li>
-                                    <li>어우러진 커피</li>
+                                    <li>에스프레소의</li>
+                                    <li>카페모카</li>
                                 </ul>
                             </div>
                             <div class="pic-item swiper-slide">
@@ -187,7 +187,7 @@
                                     <li>찬물로 오랜시간</li>
                                     <li>우려내어 와인처럼</li>
                                     <li>숙성시켜 마시는</li>
-                                    <li>차가운 콜드브루</li>
+                                    <li>콜드브루</li>
                                 </ul>
                             </div>
                         </div>
@@ -200,16 +200,16 @@
                                     <li>새콤 달콤한</li>
                                     <li>진한 망고 과즙을</li>
                                     <li>느낄 수 있는</li>
-                                    <li>엔제린 스노우</li>
+                                    <li>망고 스노우</li>
                                 </ul>
                             </div>
                             <div class="pic-item swiper-slide">
                                 <img src="images/스노우2.png" alt="best">
                                 <ul>
                                     <li>새콤달콤한</li>
-                                    <li> 요거트와 샤인머스캣의</li>
+                                    <li>요거트와 샤인머스캣의</li>
                                     <li>달콤함이 조화로운</li>
-                                    <li>엔제린스노우</li>
+                                    <li>샤인머스켓 스노우</li>
                                 </ul>
                             </div>
                             <div class="pic-item swiper-slide">
@@ -218,7 +218,7 @@
                                     <li>달콤한 초콜릿의</li>
                                     <li>이색적인 민트향이</li>
                                     <li>상큼톡톡한</li>
-                                    <li>엔제린스노우</li>
+                                    <li>민트초코 스노우</li>
                                 </ul>
                             </div>
                             <div class="pic-item swiper-slide">
@@ -227,7 +227,7 @@
                                     <li>달콤한 카라멜시럽과</li>
                                     <li>로투스쿠키가 만나</li>
                                     <li>조화를 이루는</li>
-                                    <li>아이스 블렌딩 음료</li>
+                                    <li>로투스쿠키 스노우</li>
                                 </ul>
                             </div>
                             <div class="pic-item swiper-slide">
@@ -236,7 +236,7 @@
                                     <li>달콤한 초콜릿과</li>
                                     <li>진한 초코칩을 입안에서</li>
                                     <li>느낄 수 있는 아이스</li>
-                                    <li>커피 블렌딩 음료</li>
+                                    <li>자바초코칩 스노우</li>
                                 </ul>
                             </div>
                         </div>
@@ -276,7 +276,7 @@
                                     <li>경상북도 사과와 당근을</li>
                                     <li>통째로 갈아만든</li>
                                     <li>신선하고 새콤달콤한</li>
-                                    <li>리얼 생과일주스</li>
+                                    <li>리얼 사과당근주스</li>
                                 </ul>
                             </div>
                             <div class="pic-item swiper-slide">
@@ -285,7 +285,7 @@
                                     <li>경상북도 사과를</li>
                                     <li>통째로 갈아만든</li>
                                     <li>신선하고 새콤달콤한</li>
-                                    <li>리얼 생과일주스</li>
+                                    <li>리얼 사과주스</li>
                                 </ul>
                             </div>
                             <div class="pic-item swiper-slide">
@@ -294,7 +294,7 @@
                                     <li>경상북도 방울토마토를</li>
                                     <li>통째로 갈아만든</li>
                                     <li>신선하고 새콤달콤한</li>
-                                    <li>리얼 생과일주스</li>
+                                    <li>리얼 토마토주스</li>
                                 </ul>
                             </div>
                         </div>
@@ -306,8 +306,8 @@
                                 <ul>
                                     <li>천연 복숭아 오일을</li>
                                     <li>블렌딩하여</li>
-                                    <li>달콤함이</li>
-                                    <li>가미된 우롱차</li>
+                                    <li>달콤함의</li>
+                                    <li>피치우롱</li>
                                 </ul>
                             </div>
                             <div class="pic-item swiper-slide">
@@ -442,6 +442,10 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="order">
+                    <a href="https://www.lotteeatz.com
+                    " target="_blank" rel="noopener noreferrer">LOTTE EATZ</a>
                 </div>
             </div>
             <div class="event">
